--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,6 @@ com_crashlytics_export_strings.xml
 
 ## Eclipse
 .classpath
-.project
 .metadata
 **/bin/
 tmp/
@@ -62,3 +61,4 @@ build/
 
 ## OS Specific
 .DS_Store
+/bin/
