--- a/android/build.gradle
+++ b/android/build.gradle
@@ -59,7 +59,7 @@ task run(type: Exec) {
     }
 
     def adb = path + "/platform-tools/adb"
-    commandLine "$adb", 'shell', 'am', 'start', '-n', 'com.mygdx.game.android/com.mygdx.game.android.AndroidLauncher'
+    commandLine "$adb", 'shell', 'am', 'start', '-n', 'all.adam.android/all.adam.android.AndroidLauncher'
 }
 
 // sets up the Android Eclipse project, using the old Ant based build.
